Read the class path fine on JVM versions >= 9